Remove user specific config in global.ini

--- a/obs-studio/global.ini
+++ b/obs-studio/global.ini
@@ -14,7 +14,7 @@ DisableOSXVSync=true
 ResetOSXVSyncOnExit=true
 
 [Locations]
-Configuration=/Users/deliabenson/Library/Application Support
-SceneCollections=/Users/deliabenson/Library/Application Support
-Profiles=/Users/deliabenson/Library/Application Support
-PluginManagerSettings=/Users/deliabenson/Library/Application Support
+Configuration=~/Library/Application Support
+SceneCollections=~/Library/Application Support
+Profiles=~/Library/Application Support
+PluginManagerSettings=~/Library/Application Support
